# photobooth-app-plugins

./: .gitignore  LICENSE  README.md  pyproject.toml
opt/: prompt_editor.py  prompt_editor_html_template.html
src/filter_ai/: config.py
src/filter_nanobanana/: __init__.py  config.py  filter_nanobanana.py  models.py  tryouts.ipynb
src/filter_openai/: README.md  __init__.py  config.py  filter_openai.py  models.py
tests/: test_filter_openai.py  test_integration.py
