[project]
name = "filter-openai-plugin"
version = "1.0.0"
description = "OpenAI filter plugin for photobooth-app"
authors = ["clang88 <lanchr7@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "niquests",
    "pydantic",
    "pydantic-settings",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[dependency-groups]
dev = [
    "pytest",
    "photobooth-app",
    "ipykernel"
]

[tool.ruff]
line-length = 150
target-version = "py310"